--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "webpack-cli": "^3.1.1"
   },
   "jest": {
-    "transform": {}
+    "transform": {},
+    "setupTestFrameworkScriptFile": "./setupTests.js"
   },
   "devDependencies": {
     "enzyme": "^3.6.0",
